--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,239 @@
-.App {
-  text-align: center;
+:root{
+  --bg-color:#F1F6F5;
+  --color-text:#646E82;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html{
+  font-size: 16px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  
+}
+
+
+.App{
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(158.53deg, #EEF0F5 14.11%, #E2E4EA 85.89%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container{
+  width: 25%;
+  height: 75%;
+  background: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%, #E6E9EF 94.88%);
+  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53), 13px 14px 12px -6px rgba(166, 180, 200, 0.57);
+  border-radius: 10px;
+  border: 1px solid;
+  border-image-source: linear-gradient(135.83deg, #FFFFFF 22.24%, #BAC3CF 85.59%);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+} 
+
+.container h1{
+  font-size: 1.5rem;
+  text-align: center;
+  color: var(--color-text);
+  height: 7%;
+}
+
+.container .form{
+  width: 100%;
+  height: 10%;
+  padding: .5rem .2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.form input[type="text"]{
+  font-size: 1rem;
+  color: var(--color-text);
+  padding: .6rem .7rem;
+  background: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%, #E6E9EF 94.88%);
+  outline:none;
+  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53), 13px 14px 12px -6px rgba(166, 180, 200, 0.57);
+  border-radius: 10px;
+  border: 1px solid;
+  border-image-source: linear-gradient(135.83deg, #FFFFFF 22.24%, #BAC3CF 85.59%);
+}
+
+.form button{
+  padding: .3rem .3rem;
+  background-image: linear-gradient(-225deg, #22E1FF 0%, #1D8FE1 48%, #625EB1 100%);
+  outline:none;
+  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53), 13px 14px 12px -6px rgba(166, 180, 200, 0.57);
+  border-radius: 10px;
+  border: 1px solid;
+  border-image-source: linear-gradient(135.83deg, #FFFFFF 22.24%, #BAC3CF 85.59%);
+  box-shadow: inset 1.6px 1.3px 1.98px rgba(0, 0, 0, 0.2);
+  transition: .3s;
+  cursor: pointer;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.form button:hover{
+  transform: scale(1.1);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form button svg{
+  color: #fff;
+  width: 70%;
+  height: auto;
+}
+
+.form button:active{
+  box-shadow: 3px 3px 11px 2px rgb(0, 198, 251,0.35);
+}
+
+.list-homeworks{
+  width: 100%;
+  height: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(-225deg, #22E1FF 0%, #1D8FE1 48%, #625EB1 100%);
+  border-radius: 10px;
+
+}
+
+
+/* 
+
+
+ */
+
+
+
+/* CODE CSS CHECKBOX */
+.list-homeworks .list-item {
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 90%;
+  height: 2.7rem;
+  margin: .4rem 0;
+  background: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%, #E6E9EF 94.88%);
+  box-shadow: -2.5px -2.5px 10px rgba(255, 255, 255, 0.3), 6.5px 7px 6px -3px rgba(166, 180, 200, 0.27);
+  border-radius: 10px;
+  border: 1px solid;
+  border-image-source: linear-gradient(135.83deg, #FFFFFF 22.24%, #BAC3CF 85.59%);
+  display: flex;
+  align-items: center;
+  min-height: 2.7rem;
+  transition: .3s;
+}
+
+.list-homeworks .list-item:hover {
+  box-shadow: -5px -5px 20px rgba(255, 255, 255, 0.53), 13px 14px 12px -6px rgba(166, 180, 200, 0.57);
+}
+
+
+.list-item:last-child {
+  border: 0;
+}
+.hidden-box {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+  appearance: none;
+  opacity: 0;
+}
+.check--label {
+  font-size: .9rem;
+  color: var(--color-text);
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+.check--label-box {
+  display: flex;
+  align-self: center;
+  position: relative;
+  height: 20px;
+  width: 20px;
+  margin: 0 20px;
+  border: 2px solid #3498db;
+  border-radius: 2px;
+  cursor: pointer;
+}
+.check--label-text {
+  display: flex;
+  align-self: center;
+  position: relative;
+  cursor: pointer;
+  border-left: 1px solid #ecf0f1;
+}
+.check--label-text:after {
+  content: '';
+  display: block;
+  width: 0%;
+  height: 2px;
+  background-color: var(--color-text);
+  position: absolute;
+  top: 50%;
+  left: -3%;
+  transform: translateY(-50%);
+  transition: width 100ms ease-in-out;
+}
+
+/* .hidden-box:checked + .check--label {
+// Texto durante el checkbox esta activado 
+} */
+
+.hidden-box:checked + .check--label .check--label-box {
+  background-image: linear-gradient(-225deg, #22E1FF 0%, #1D8FE1 48%, #625EB1 100%);
+}
+.hidden-box:checked + .check--label .check--label-box:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 6px;
+  width: 6px;
+  height: 12px;
+  border: solid #fff;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+.hidden-box:checked + .check--label .check--label-text:after {
+  width: 105%;
 }
